Fix layout issue

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -451,7 +451,7 @@ $button-size: 1.5rem;
     }
   }
   @media #{$x-large} {
-    @include grid(8,1.5);
+    @include grid(12,1.5);
     @include prefix(12,2);
   }
 }
